Revision history for Unix::SetuidWrapper

          - Added comments to example
          - Shaved the Yak
          - Untainted_cmd now returns a list
          - Updated prereqs
          - Example working
          - Builds role map

0.1.1     2015-05-05 13:22:37
          - Added project files to master branch
