@@ -1,0 +1,21 @@
+Build.PL
+Changes
+LICENSE
+MANIFEST
+META.json
+META.yml
+README
+SIGNATURE
+examples/admin
+lib/Unix/SetuidWrapper.pm
+t/01always_pass.t
+t/02pod.t
+t/03podcoverage.t
+t/05kwalitee.t
+t/06yaml.t
+t/07podspelling.t
+t/10test_script.t
+t/admin.log
+t/boilerplate.pm
+t/script.log
+t/users.sub
